--- a/config/database.yml
+++ b/config/database.yml
@@ -22,6 +22,8 @@ test:
   primary:
     <<: *default
     database: storage/db/test.sqlite3
+    timeout: 15000
+    default_transaction_mode: deferred
 
 performance:
   primary:
